Render 'ConnectStripeAccount' card in Stripe settings page - Add placeholder div for the card when Stripe is connected - Render card in ReactDom within the placeholder div - Add styles to align the card at center of the page - Fix stylesheet file name

--- a/client/settings/styles.scss
+++ b/client/settings/styles.scss
@@ -1,3 +1,12 @@
 #wc-stripe-account-settings-container {
 	box-sizing: border-box;
 }
+
+#wc-stripe-new-account-container {
+	display: flex;
+	justify-content: center;
+
+	@media ( max-width: 660px ) {
+		display: block;
+	}
+}
